--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "^14"
+  },
   "dependencies": {
     "axios": "^1.6.3",
     "cheerio": "^1.0.0-rc.12",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "^6",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.18.1",
     "puppeteer": "^21.6.1",
-    "puppeteer-core": "^21.6.1",
+    "puppeteer-core": "^6",
     "request": "^2.88.2",
     "util.promisify": "^1.1.2"
+  },
+  "devDependencies": {
+    "puppeteer": "^16.2.0"
   }
 }
