--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "^20"
+    "node": "18.x"
   },
   "dependencies": {
     "axios": "^1.6.3",
